--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-email-editor",
   "version": "1.5.0",
   "description": "Unlayer's Email Editor Component for React.js",
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "src/index.jsx",
   "files": [
     "css",
     "es",
